fix light dark mode

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+:root {
+  color-scheme: dark light;
+}
+
 body {
   position: relative;
   margin: 0;
